@@ -1,0 +1,5 @@
+Arbitrary razor-thin, axisymmetric potential
+============================================
+
+.. autoclass:: galpy.potential.AnyAxisymmetricRazorThinDiskPotential
+   :members: __init__
